--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   </header>
 
   <div class="bici-memoria">
-    <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
-    <div class="texto">A la memoria de<br>Antonio Bici Díaz.<br>D.E.P.</div>
+    <img src="imagenes/Bicidep.jpg" alt="Antonio Bici Díaz">
+    <div class="texto">En memoria de<br>Antonio "Bici" Díaz.<br>D.E.P.</div>
   </div>
 
   <footer>
@@ -153,3 +153,4 @@
   </footer>
 </body>
 </html>
+
