--- a/biografia.htm
+++ b/biografia.htm
@@ -20,7 +20,8 @@
     <a href="imagenes.htm">Imágenes</a>
     <a href="videos.htm">Videos</a>
     <a href="prensa.htm">Prensa</a>
-    <a href="mailto:1akomunion@gmail.com">Contacto</a>
+    <a href="https://www.facebook.com/1aKomunion">Facebook</a>
+
   </nav>
 
   <main>
