--- a/imagenes.htm
+++ b/imagenes.htm
@@ -20,7 +20,7 @@
     <a href="imagenes.htm" class="active">Imágenes</a>
     <a href="videos.htm">Videos</a>
     <a href="prensa.htm">Prensa</a>
-    <a href="mailto:1akomunion@gmail.com">Contacto</a>
+  <a href="https://www.facebook.com/1aKomunion">Facebook</a>
   </nav>
 
   <main>
