--- a/inicio.htm
+++ b/inicio.htm
@@ -4,40 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio - 1ª Komunión</title>
-  <meta name="description" content="Inicio del sitio web del grupo 1ª Komunión">
-  <link rel="icon" href="http://www.1akomunion.es/favicon.ico">
-  <link rel="stylesheet" href="css/style.css">
-
-  <style>
-    /* Fondo negro exclusivo para esta página */
-    body {
-      background: #000;
-    }
-
-    .facebook-link img {
-      width: 50px;
-      height: auto;
-      transition: transform 0.3s ease, filter 0.3s ease;
-    }
-
-    .facebook-link img:hover {
-      transform: scale(1.1);
-      filter: drop-shadow(0 0 5px #ff0000);
-    }
-
-    .social {
-      text-align: center;
-      margin-top: 1.5rem;
-    }
-
-    .social p {
-      margin-bottom: 0.5rem;
-      color: #fff;
-    }
-  </style>
+ <link rel="stylesheet" href="css/style.css">
+<meta name="description" content="Página inicio del grupo 1ª Komunión">
 </head>
 
-<body>
+<body style="
+  background-color:#000;
+  background-image:url('imagenes/_MG_5152b.jpg');
+  background-repeat:no-repeat;
+  background-position:center center;
+  background-size:cover;
+  background-attachment:fixed;">
+
   <header>
     <img src="imagenes/texto%20logo1.gif" alt="1ª Komunión" class="logo">
   </header>
@@ -50,7 +28,7 @@
     <a href="imagenes.htm">Imágenes</a>
     <a href="videos.htm">Videos</a>
     <a href="prensa.htm">Prensa</a>
-    <a href="mailto:1akomunion@gmail.com">Contacto</a>
+   <a href="https://www.facebook.com/1aKomunion">Facebook</a>
   </nav>
 
   <main>
@@ -61,16 +39,6 @@
       Aquí encontrarás toda la información sobre <span style="color:#ff0000;">1ª Komunión</span>:  
       nuestra historia, discografía, letras, imágenes, vídeos y mucho más.  
     </p>
-
-    <p style="text-align:center;">
-      Síguenos también en nuestras redes sociales y revive la energía de la música que marcó una época.
-    </p>
-
-    <div class="social">
-      <p>Síguenos en Facebook:</p>
-      <a href="http://www.facebook.com/1aKomunion" target="_blank" class="facebook-link">
-        <img src="imagenes/facebook.gif" alt="Facebook 1ª Komunión">
-      </a>
     </div>
   </main>
 
