--- a/videos.htm
+++ b/videos.htm
@@ -70,7 +70,7 @@
     <a href="imagenes.htm">Imágenes</a>
     <a href="videos.htm" class="active">Videos</a>
     <a href="prensa.htm">Prensa</a>
-    <a href="mailto:1akomunion@gmail.com">Contacto</a>
+  <a href="https://www.facebook.com/1aKomunion">Facebook</a>
   </nav>
 
   <main>
