--- a/inicio.htm
+++ b/inicio.htm
@@ -1,49 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - 1ª Komunión</title>
- <link rel="stylesheet" href="css/style.css">
-<meta name="description" content="Página inicio del grupo 1ª Komunión">
-</head>
-
-<body style="
-  background-color:#000;
-  background-image:url('imagenes/_MG_5152b.jpg');
-  background-repeat:no-repeat;
-  background-position:center center;
-  background-size:cover;
-  background-attachment:fixed;">
-
-  <header>
-    <img src="imagenes/texto%20logo1.gif" alt="1ª Komunión" class="logo">
-  </header>
-
-  <nav>
-    <a href="inicio.htm" class="active">Inicio</a>
-    <a href="biografia.htm">Biografía</a>
-    <a href="discografia.htm">Discografía</a>
-    <a href="letras.htm">Letras</a>
-    <a href="imagenes.htm">Imágenes</a>
-    <a href="videos.htm">Videos</a>
-    <a href="prensa.htm">Prensa</a>
-   <a href="https://www.facebook.com/1aKomunion">Facebook</a>
-  </nav>
-
-  <main>
-    <h1>Bienvenidos a 1ª Komunión</h1>
-
-    <p style="text-align:center;">
-      <b>¡Gracias por visitarnos!</b><br><br>
-      Aquí encontrarás toda la información sobre <span style="color:#ff0000;">1ª Komunión</span>:  
-      nuestra historia, discografía, letras, imágenes, vídeos y mucho más.  
-    </p>
-    </div>
-  </main>
-
-  <footer>
-    &copy; 1ª Komunión - Todos los derechos reservados
-  </footer>
-</body>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - 1ª Komunión</title>
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Página inicio del grupo 1ª Komunión">
+  </head>
+  <body style="
+  background-color:#000;  background-image:url('imagenes/_MG_5152b.jpg');
+  background-repeat:no-repeat;  background-position:center center;
+  background-size:cover;  background-attachment:fixed;">
+    <header> <a href="file:///C:/Users/1akom/Desktop/1a-komunion-web/index.html"
+        target="_top"><img src="imagenes/texto%20logo1.gif" alt="1ª Komunión" class="logo"></a>
+    </header>
+    <nav> <a href="inicio.htm" class="active">Inicio</a> <a href="biografia.htm">Biografía</a>
+      <a href="discografia.htm">Discografía</a> <a href="letras.htm">Letras</a>
+      <a href="imagenes.htm">Imágenes</a> <a href="videos.htm">Videos</a> <a href="prensa.htm">Prensa</a>
+      <a href="https://www.facebook.com/1aKomunion">Facebook</a> </nav>
+    <main><br>
+    </main>
+    <footer> © 1ª Komunión - Todos los derechos reservados </footer>
+  </body>
 </html>
