--- a/inicio.htm
+++ b/inicio.htm
@@ -11,9 +11,8 @@
   background-color:#000;  background-image:url('imagenes/_MG_5152b.jpg');
   background-repeat:no-repeat;  background-position:center center;
   background-size:cover;  background-attachment:fixed;">
-    <header> <a href="file:///C:/Users/1akom/Desktop/1a-komunion-web/index.html"
-        target="_top"><img src="imagenes/texto%20logo1.gif" alt="1ª Komunión" class="logo"></a>
-    </header>
+    <header> <a href="index.html" target="_top"><img src="imagenes/texto%20logo1.gif"
+          alt="1ª Komunión" class="logo"></a> </header>
     <nav> <a href="inicio.htm" class="active">Inicio</a> <a href="biografia.htm">Biografía</a>
       <a href="discografia.htm">Discografía</a> <a href="letras.htm">Letras</a>
       <a href="imagenes.htm">Imágenes</a> <a href="videos.htm">Videos</a> <a href="prensa.htm">Prensa</a>
