--- a/inicio.htm
+++ b/inicio.htm
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Página inicio del grupo 1ª Komunión">
   </head>
-  <body style="
-  background-color:#000;  background-image:url('imagenes/_MG_5152b.jpg');
-  background-repeat:no-repeat;  background-position:center center;
+  <body style=" 
+  background-color:#000;  background-image:url('imagenes/_MG_5152b.jpg');  background-repeat:no-repeat;  background-position:center center;
   background-size:cover;  background-attachment:fixed;">
     <header> <a href="index.html" target="_top"><img src="imagenes/texto%20logo1.gif"
           alt="1ª Komunión" class="logo"></a> </header>
@@ -17,8 +16,6 @@
       <a href="discografia.htm">Discografía</a> <a href="letras.htm">Letras</a>
       <a href="imagenes.htm">Imágenes</a> <a href="videos.htm">Videos</a> <a href="prensa.htm">Prensa</a>
       <a href="https://www.facebook.com/1aKomunion">Facebook</a> </nav>
-    <main><br>
-    </main>
     <footer> © 1ª Komunión - Todos los derechos reservados </footer>
   </body>
 </html>
