--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
-    <header class="cabecera"> <a href="inicio.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="inicio.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"></a><br>
       <a href="inicio.htm" class="btn-entrar"><img src="imagenes/entrar1.gif" alt="Entrar"></a></header>
     <section class="memoria"><br>
@@ -18,8 +18,9 @@
       <br>
       <br>
       <br>
-      <img src="imagenes/Bicidep.jpg" alt="Antonio &quot;Bici&quot; Díaz" style="width: 302px; height: 242px;">
-      <p class="texto-memoria"> En memoria de Antonio "Bici" Díaz. </p>
+      <img src="imagenes/Bicidep.jpg" alt="Antonio &quot;Bici&quot; Díaz" style="width: 400px; max-width: 80%; height: auto;">
+      <p class="texto-memoria"> En memoria de </p>
+      <p class="texto-memoria"> Antonio "Bici" Díaz. </p>
       <p class="texto-memoria">D.E.P. </p>
     </section>
   </body>
