Fix HTML structure and add background color

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
-    <header class="cabecera"> <a href="inicio.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="inicio.htm" class="logo"> <background-color: #000; img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"></a><br>
       <a href="inicio.htm" class="btn-entrar"><img src="imagenes/entrar1.gif" alt="Entrar"></a></header>
     <section class="memoria"><br>
@@ -25,3 +25,4 @@
     </section>
   </body>
 </html>
+
