--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <background-color: #000>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Página nueva 1</title>
     <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
-    <header class="cabecera"> <a href="inicio.htm" class="logo"> <background-color: #000; img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="inicio.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"></a><br>
       <a href="inicio.htm" class="btn-entrar"><img src="imagenes/entrar1.gif" alt="Entrar"></a></header>
     <section class="memoria"><br>
@@ -25,4 +26,5 @@
     </section>
   </body>
 </html>
+
 
