Fix HTML structure and add background color

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
+        <background-color: #000>
     <header class="cabecera"> <a href="inicio.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"></a><br>
       <a href="inicio.htm" class="btn-entrar"><img src="imagenes/entrar1.gif" alt="Entrar"></a></header>
@@ -26,5 +27,6 @@
     </section>
   </body>
 </html>
+
 
 
