--- a/biografia.htm
+++ b/biografia.htm
@@ -1,137 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Biografía - 1ª Komunión</title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="Biografía del grupo 1ª Komunión">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Biografía – 1ª KOMUNION</title>
+    <link rel="stylesheet" href="estilos-int.css">
 </head>
-<body style="background:#000;">
-  <header>
-    <img src="imagenes/texto%20logo1.gif" alt="1ª Komunión" class="logo">
-  </header>
+<body>
+    <header class="cabecera">
+        <a href="index.htm" class="logo">
+            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
+        </a>
+    </header>
 
-  <nav>
-    <a href="inicio.htm">Inicio</a>
-    <a href="biografia.htm" class="active">Biografía</a>
-    <a href="discografia.htm">Discografía</a>
-    <a href="letras.htm">Letras</a>
-    <a href="imagenes.htm">Imágenes</a>
-    <a href="videos.htm">Videos</a>
-    <a href="prensa.htm">Prensa</a>
-    <a href="https://www.facebook.com/1aKomunion">Facebook</a>
+    <nav class="nav-principal">
+        <ul>
+            <li><a href="inicio.htm">Inicio</a></li>
+            <li><a href="biografia.htm" class="active">Biografía</a></li>
+            <li><a href="discografia.htm">Discografía</a></li>
+            <li><a href="imagenes.htm">Imágenes</a></li>
+            <li><a href="videos.htm">Vídeos</a></li>
+            <li><a href="prensa.htm">Prensa</a></li>
+            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
+            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        </ul>
+    </nav>
 
-  </nav>
+    <main class="contenido">
+        <!-- aquí tu texto de biografía -->
+   <main class="contenido">
+        <h1>Biografía</h1>
 
-  <main>
-    <h1>Biografía</h1>
-    <p> Corría el año 1988 e internet era prácticamente un pensamiento futurista. Me refiero exactamente, que menos el fútbol de 2ª regional y las veladas pugilísticas de Estudio 17  (no te digo na´) todo lo demás en esa época era bastante aburrido en domingo. Menos mal que por encima de todo se encontraba lo que realmente había importado hasta la fecha y que fuere  la hora que fuere, te esperaba sin malos rollos y en el mismo estado de siempre. Estoy por supuesto hablando de la MUSICA.</p>
-<P>Por entonces lo más difícil siempre era encontrar a alguien, que al igual que tu, estuviera dispuesto a descargar toda la energía del Universo intentando emular a sus héroes musicales. Solamente había dos posibilidades: 1ª los músicos en dique seco 2ª aquellos que les hervía la sangre por hacer algo que les sacara  de la rutina.</P>
- <p>Y una de las casualidades de la vida: delante de ti, sin saberlo, tienes los ingredientes necesarios para cocinar el plato  del que hace tiempo que te sabes la receta de memoria.</p>  
+        <img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión" class="bio-img">
 
-<p class="MsoNormal" align="center">
-<font face="Verdana" size="2" color="#FFFFFF">
-<span lang="ES-TRAD">Había nacido</span>...<span lang="ES-TRAD"> </span>
-</font><b><i>
-<font size="5" color="#FFFFFF">
-<span style="font-family: Verdana">&nbsp;</span></font></i><font size="6" color="#FF0000"><span lang="ES-TRAD" style="font-family: Times New Roman">1ª 
-Komunión</span><span style="font-family: Times New Roman">:</span></font></b></p>
+        <p>Corría el año 1988 e internet era prácticamente un pensamiento futurista. Me refiero exactamente, que menos el fútbol de 2ª regional y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo demás en esa época era bastante aburrido en domingo. Menos mal que por encima de todo se encontraba lo que realmente había importado hasta la fecha y que fuese la hora que fuese, te esperaba sin malos rollos y en el mismo estado de siempre. Estoy por supuesto hablando de la <strong>MÚSICA</strong>.</p>
 
-&nbsp;
-		<img border="0" src="file:///C:/Users/1akom/Desktop/web%20kom/imagenes/Bici.jpg" id="img15" onmouseout="FP_swapImgRestore()" onmouseover="FP_swapImg(1,0,/*id*/'img15',/*url*/'imagenes/BICI%20[].jpg')"></p><p class="MsoNormal" align="center">
-<i>
-<font color="#FFFF00" face="Verdana" size="2">Antonio <b>
-“Bicicleta”</b> Díaz</font></i></p>
-		<p class="MsoNormal" align="center">
-		<font color="#FFFFFF" face="Verdana" size="2">
-		<span style="text-decoration: none">
-&nbsp;</span><b><span lang="ES-TRAD">Voz</span></b><span lang="ES-TRAD"> de voces</span>.</font></p>
-<p class="MsoNormal" align="center">&nbsp;
-		</p>
-<p class="MsoNormal" align="center">&nbsp;
-		</p>
-		<p align="center"><font face="Verdana">&nbsp;
-		
-		<img border="0" src="imagenes/PATRI.jpg" width="131" height="200" id="img29" onmouseover="FP_swapImg(1,0,/*id*/'img29',/*url*/'imagenes/PATRI%20[].jpg')" onmouseout="FP_swapImgRestore()"></font></p><p class="MsoNormal" align="center"><i>
-<font color="#FFFF00" face="Verdana" size="2">Patricio Tomás</font></i></p>
-		<p class="MsoNormal" align="center">
-		<font face="Verdana" size="2" color="#FFFFFF">
-		<span lang="ES-TRAD">Superior del Monasterio de los <b>guitarristas</b> descalzos.</span></font></p>
-<p class="MsoNormal" align="center">&nbsp;</p>
-<p class="MsoNormal" align="center">&nbsp;</p>
-		<p align="center"><font face="Verdana">
-		
-		
-		<img border="0" src="imagenes/Luis.jpg" id="img31" onmouseout="FP_swapImgRestore()" onmouseover="FP_swapImg(1,0,/*id*/'img31',/*url*/'imagenes/LUIS%20[].jpg')"></font></p>
-<p class="MsoNormal" align="center"><i>
-<font color="#FFFF00" face="Verdana" size="2">Luis Solaz</font></i></p>
-		<p class="MsoNormal" align="center">
-		<font face="Verdana" size="2" color="#FFFFFF">
-		<span lang="ES-TRAD">Superviviente de la Vaquilla del Angel, <b>bajista</b> y <b>apoyo logistico</b></span><b>.</b></font></p>
-<p class="MsoNormal" align="center">&nbsp;</p>
-<p class="MsoNormal" align="center">&nbsp;</p>
-<p align="center"><font face="Verdana">
-		
-		<img border="0" src="imagenes/MADRI.jpg" width="129" height="200" id="img30" onmouseover="FP_swapImg(1,0,/*id*/'img30',/*url*/'imagenes/MADRI%20[].jpg')" onmouseout="FP_swapImgRestore()"></font></p>
-<p class="MsoNormal" align="center"><i>
-<font color="#FFFF00" face="Verdana" size="2">Jesús <b>“El Madri” </b>Gallardo</font></i></p>
-		<p class="MsoNormal" align="center">
-		<font face="Verdana" size="2" color="#FFFFFF">
-		<span lang="ES-TRAD">Aburrido compulsivo <b>baterísta .</b></span></font></p>
-<p class="MsoNormal" align="center">&nbsp;
-		</p>
-<p class="MsoNormal" align="justify">
-		<font face="Verdana" size="2" color="#FFFFFF">... 
-<span lang="ES-TRAD">
-Y como todo el mundo sabe, este 
-maravilloso y jugoso manjar, duró lo que los comensales tardaron en rebañar el 
-plato. Nada más y nada menos que 4 magníficos años. Por cierto, prolíficos y 
-fructuosos años que “dieron a luz” todos aquellos conciertos</span> (Unos 84 más 
-o menos)<span lang="ES-TRAD">, grabaciones y 
-sesiones de guasa inolvidables tanto para sus miembros como para sus seguidores.</span></font></p>
-<p class="MsoNormal" align="left">&nbsp;
-		</p>
-<p class="MsoNormal" align="center">
-		<font face="Verdana">
-		<img border="0" src="imagenes/lapida2.gif" width="150" height="259"></font></p>
-<p class="MsoNormal" align="center">&nbsp;
-		</p>
-<p class="MsoNormal" align="justify">
-		<font face="Verdana" size="2">Peeeerooooo...... pasaron los años, y tras 
-		16 años sin tocar, decidimos Resucitar con motivo del 20º aniversario de 
-		la formación del grupo.</font></p>
-<p class="MsoNormal" align="justify">
-		<font face="Verdana" size="2">Para conmemorar tal aniversario, 
-		reaparecimos actuando en el XIII Bestialc de L'Alcora, el 30 de agosto 
-		de 2008. Con sólo unos ensayos (7), y en plan kamikaze, pensamos que 
-		para la ocasión, debíamos hacer algo que quedase ya plasmado para la 
-		posteridad, con lo que gracias a la colaboración de Lalo Cotanda, Juanki 
-		y sobre todo al público que una vez más vino a vernos, brindándonos la 
-		ocasión de vivir una noche inolvidable con su presencia, pues pudimos 
-		grabar el bolo en vídeo, pensando sobre todo que nuestros hijos el día 
-		de mañana puedan tirar las copias a la basura pensando lo pillados que 
-		estaban sus padres.</font></p>
-<p class="MsoNormal" align="justify">
-		<font face="Verdana" size="2">Y de esta forma, grabamos y editamos un 
-		Dvd con la mayor parte de las canciones que perpetramos en ése 
-		concierto, entrevistas, algunas fotos.... </font></p>
-<p class="MsoNormal" align="justify">
-		<font face="Verdana" size="2">Luego, ya veremos lo que nos deparará el 
-		destino, ya que la vida es como es, y no como nosotros queremos que sea.
-		</font></p>
-<p class="MsoNormal" align="justify">
-		<font face="Verdana" size="2">Así que de momento y mientras nos quede un 
-		atisbo de ganas de pasarlo bien...</font></p>
-<p class="MsoNormal" align="center"><font face="Verdana" size="2"><b><span lang="ES-TRAD">Por Siempre y Para Siempre</span></b><span lang="ES-TRAD">:&nbsp;
-</span></font></p>
-<p class="MsoNormal" align="center">
-<a target="_blank" href="imagenes/foto%20oficial%20[1024x768].jpg">
-<img border="0" src="imagenes/foto%20oficial%20[320x200].gif" width="320" height="240">
-  </main>
+        <p>Por entonces lo más difícil siempre era encontrar a alguien, que al igual que tú, estuviera dispuesto a descargar toda la energía del Universo intentando emular a sus héroes musicales. Solamente había dos posibilidades: 1ª los músicos en dique seco 2ª aquellos que les hervía la sangre por hacer algo que les sacara de la rutina.</p>
 
-  <footer>
-    &copy; 1ª Komunión - Todos los derechos reservados
-  </footer>
+        <p>Y una de las casualidades de la vida: delante de ti, sin saberlo, tienes los ingredientes necesarios para cocinar el plato del que hace tiempo que te sabes la receta de memoria.</p>
+
+        <p class="center big rojo">Había nacido... <strong>1ª Komunión</strong>:</p>
+
+        <section class="integrantes">
+            <article class="integrante">
+                <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
+                <p class="nombre">Antonio “Bicicleta” Díaz</p>
+                <p>Voz de voces</p>
+            </article>
+
+            <article class="integrante">
+                <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
+                <p class="nombre">Patricio Tomás</p>
+                <p>Superior del Monasterio de los guitarristas descalzos</p>
+            </article>
+
+            <article class="integrante">
+                <img src="imagenes/Luis.jpg" alt="Luis Solaz">
+                <p class="nombre">Luis Solaz</p>
+                <p>Superviviente de la Vaquilla del Ángel, bajista y apoyo logístico</p>
+            </article>
+
+            <article class="integrante">
+                <img src="imagenes/MADRI.jpg" alt="Jesús El Madri Gallardo">
+                <p class="nombre">Jesús “El Madri” Gallardo</p>
+                <p>Aburrido compulsivo baterista</p>
+            </article>
+        </section>
+
+        <p>Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró lo que los comensales tardaron en rebañar el plato. Nada más y nada menos que 4 magníficos años. Por cierto, prolíficos y fructuosos años que “dieron a luz” todos aquellos conciertos (unos 84 más o menos), grabaciones y sesiones de guasa inolvidables tanto para sus miembros como para sus seguidores.</p>
+
+        <p class="center">
+            <img src="imagenes/lapida2.gif" alt="Lápida" class="lapida">
+        </p>
+
+        <p>Peeeerooooo...... pasaron los años, y tras 16 años sin tocar, decidimos resucitar con motivo del 20º aniversario de la formación del grupo.</p>
+
+        <p>Para conmemorar tal aniversario, reaparecimos actuando en el XIII Bestialc de L'Alcora, el 30 de agosto de 2008. Con sólo unos ensayos (7), y en plan kamikaze, pensamos que para la ocasión debíamos hacer algo que quedase ya plasmado para la posteridad, con lo que gracias a la colaboración de Lalo Cotanda, Juanki y sobre todo al público que una vez más vino a vernos, brindándonos la ocasión de vivir una noche inolvidable con su presencia, pudimos grabar el bolo en vídeo, pensando sobre todo que nuestros hijos el día de mañana puedan tirar las copias a la basura pensando lo pillados que estaban sus padres.</p>
+
+        <p>Y de esta forma, grabamos y editamos un DVD con la mayor parte de las canciones que perpetramos en ese concierto, entrevistas, algunas fotos...</p>
+
+        <p>Luego, ya veremos lo que nos deparará el destino, ya que la vida es como es, y no como nosotros queremos que sea.</p>
+
+        <p class="center rojo">Así que de momento y mientras nos quede un atisbo de ganas de pasarlo bien...</p>
+
+        <p class="center">
+            <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
+                <img src="imagenes/foto%20oficial%20[320x200].gif" width="320" height="240" alt="Foto oficial">
+    </main>
 </body>
 </html>
