--- a/inicio.htm
+++ b/inicio.htm
@@ -1,21 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - 1ª Komunión</title>
-    <link rel="stylesheet" href="css/style.css">
-    <meta name="description" content="Página inicio del grupo 1ª Komunión">
-  </head>
-  <body style=" 
-  background-color:#000;  background-image:url('imagenes/_MG_5152b.jpg');  background-repeat:no-repeat;  background-position:center center;
-  background-size:cover;  background-attachment:fixed;">
-    <header> <a href="index.html" target="_top"><img src="imagenes/texto%20logo1.gif"
-          alt="1ª Komunión" class="logo"></a> </header>
-    <nav> <a href="inicio.htm" class="active">Inicio</a> <a href="biografia.htm">Biografía</a>
-      <a href="discografia.htm">Discografía</a> <a href="letras.htm">Letras</a>
-      <a href="imagenes.htm">Imágenes</a> <a href="videos.htm">Videos</a> <a href="prensa.htm">Prensa</a>
-      <a href="https://www.facebook.com/1aKomunion">Facebook</a> </nav>
-    <footer> © 1ª Komunión - Todos los derechos reservados </footer>
-  </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Inicio – 1ª KOMUNION</title>
+    <link rel="stylesheet" href="estilos-int.css">
+
+ <!-- Fondo exclusivo para inicio.htm -->
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        body {
+            background: #000 url("imagenes/_MG_5152b.jpg") no-repeat center/cover;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 3vh;
+        }
+    </style>
+</head>
+<body>
+    <header class="cabecera">
+        <a href="index.htm" class="logo">
+            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
+        </a>
+    </header>
+
+    <nav class="nav-principal">
+        <ul>
+            <li><a href="inicio.htm" class="active">Inicio</a></li>
+            <li><a href="biografia.htm">Biografía</a></li>
+            <li><a href="discografia.htm">Discografía</a></li>
+            <li><a href="imagenes.htm">Imágenes</a></li>
+            <li><a href="videos.htm">Vídeos</a></li>
+            <li><a href="prensa.htm">Prensa</a></li>
+            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
+            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        </ul>
+    </nav>
+
+    <main class="contenido"><!-- vacío --></main>
+</body>
 </html>
