--- a/prensa.htm
+++ b/prensa.htm
@@ -1,158 +1,106 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prensa - 1ª Komunión</title>
-  <meta name="description" content="Recortes y artículos de prensa sobre 1ª Komunión">
-  <link rel="icon" href="http://www.1akomunion.es/favicon.ico">
-  <link rel="stylesheet" href="css/style.css">
-
-  <style>
-    body {
-      background: #000;
-    }
-
-    main {
-      max-width: 1100px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
-
-    h1 {
-      color: #ff0000;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    .galeria {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1rem;
-      justify-items: center;
-    }
-
-    .galeria img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-
-    .galeria img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
-    }
-
-    /* Lightbox */
-    .lightbox {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      justify-content: center;
-      align-items: center;
-      backdrop-filter: blur(3px);
-    }
-
-    .lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
-    }
-
-    .lightbox:target {
-      display: flex;
-    }
-
-    .close {
-      position: fixed;
-      top: 30px;
-      right: 50px;
-      color: #fff;
-      font-size: 2rem;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    .close:hover {
-      color: #ff0000;
-    }
-
-    @media (max-width: 600px) {
-      .close {
-        top: 15px;
-        right: 25px;
-      }
-    }
-  </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Prensa – 1ª KOMUNION</title>
+    <link rel="stylesheet" href="estilos-int.css">
 </head>
-
 <body>
-  <header>
-    <img src="imagenes/texto%20logo1.gif" alt="1ª Komunión" class="logo">
-  </header>
+    <!-- Logo que SIEMPRE vuelve a index.htm -->
+    <header class="cabecera">
+        <a href="index.htm" class="logo">
+            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
+        </a>
+    </header>
 
-  <nav>
-    <a href="inicio.htm">Inicio</a>
-    <a href="biografia.htm">Biografía</a>
-    <a href="discografia.htm">Discografía</a>
-    <a href="letras.htm">Letras</a>
-    <a href="imagenes.htm">Imágenes</a>
-    <a href="videos.htm">Videos</a>
-    <a href="prensa.htm" class="active">Prensa</a>
-  <a href="https://www.facebook.com/1aKomunion">Facebook</a>
-  </nav>
+    <!-- Menú horizontal entre líneas moradas -->
+    <nav class="nav-principal">
+        <ul>
+            <li><a href="inicio.htm">Inicio</a></li>
+            <li><a href="biografia.htm">Biografía</a></li>
+            <li><a href="discografia.htm">Discografía</a></li>
+            <li><a href="imagenes.htm">Imágenes</a></li>
+            <li><a href="videos.htm">Vídeos</a></li>
+            <li><a href="prensa.htm" class="active">Prensa</a></li>
+            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
+            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        </ul>
+    </nav>
 
-  <main>
-    <h1>Prensa</h1>
+    <!-- Galería de recortes de prensa -->
+    <main class="contenido prensa">
+        <h1>Recortes de prensa</h1>
 
-    <div class="galeria">
-      <!-- Sustituye las imágenes por las tuyas, manteniendo las rutas -->
-      <a href="#img1"><img src="imagenes/prensa1.jpg" alt="Recorte de prensa 1"></a>
-      <a href="#img2"><img src="imagenes/prensa2.jpg" alt="Recorte de prensa 2"></a>
-      <a href="#img3"><img src="imagenes/prensa3.jpg" alt="Recorte de prensa 3"></a>
-      <a href="#img4"><img src="imagenes/prensa4.jpg" alt="Recorte de prensa 4"></a>
-      <a href="#img5"><img src="imagenes/prensa5.jpg" alt="Recorte de prensa 5"></a>
-    </div>
+        <section class="galeria-prensa">
+            <h2>1988 – 1992</h2>
+            <div class="grid-prensa">
+                <a target="_blank" href="imagenes/1988_1992/00.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/00 [].jpg" alt="Recorte 00"></a>
+                <a target="_blank" href="imagenes/1988_1992/01.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/01 [].jpg" alt="Recorte 01"></a>
+                <a target="_blank" href="imagenes/1988_1992/02.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/02 [].jpg" alt="Recorte 02"></a>
+                <a target="_blank" href="imagenes/1988_1992/03.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/03 [].jpg" alt="Recorte 03"></a>
+                <a target="_blank" href="imagenes/1988_1992/04.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/04 [].jpg" alt="Recorte 04"></a>
+                <a target="_blank" href="imagenes/1988_1992/05.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/05 [].jpg" alt="Recorte 05"></a>
+                <a target="_blank" href="imagenes/1988_1992/06.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/06 [].jpg" alt="Recorte 06"></a>
+                <a target="_blank" href="imagenes/1988_1992/07.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/07 [].jpg" alt="Recorte 07"></a>
+                <a target="_blank" href="imagenes/1988_1992/08.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/08 [].jpg" alt="Recorte 08"></a>
+                <a target="_blank" href="imagenes/1988_1992/09.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/09 [].jpg" alt="Recorte 09"></a>
+                <a target="_blank" href="imagenes/1988_1992/10.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/10 [].jpg" alt="Recorte 10"></a>
+                <a target="_blank" href="imagenes/1988_1992/11.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/11 [].jpg" alt="Recorte 11"></a>
+                <a target="_blank" href="imagenes/1988_1992/12.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/12 [].jpg" alt="Recorte 12"></a>
+                <a target="_blank" href="imagenes/1988_1992/13.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/13 [].jpg" alt="Recorte 13"></a>
+                <a target="_blank" href="imagenes/1988_1992/14.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/14 [].jpg" alt="Recorte 14"></a>
+                <a target="_blank" href="imagenes/1988_1992/15.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/15 [].jpg" alt="Recorte 15"></a>
+                <a target="_blank" href="imagenes/1988_1992/16.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/16 [].jpg" alt="Recorte 16"></a>
+                <a target="_blank" href="imagenes/1988_1992/17.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/17 [].jpg" alt="Recorte 17"></a>
+                <a target="_blank" href="imagenes/1988_1992/18.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/18 [].jpg" alt="Recorte 18"></a>
+                <a target="_blank" href="imagenes/1988_1992/19.jpg">
+                    <img src="imagenes/1988_1992/Nueva carpeta/19 [].jpg" alt="Recorte 19"></a>
+                <a target="_blank" href="imagenes/prensa/image/plana_al_dia.jpg">
+                    <img src="imagenes/prensa/thumbnail/plana_al_dia_150.jpg" alt="Plana al día"></a>
+            </div>
+        </section>
 
-    <!-- Lightbox imágenes -->
-    <div class="lightbox" id="img1">
-      <a href="#" class="close">&times;</a>
-      <img src="imagenes/prensa1.jpg" alt="Recorte de prensa 1">
-    </div>
+        <hr>
 
-    <div class="lightbox" id="img2">
-      <a href="#" class="close">&times;</a>
-      <img src="imagenes/prensa2.jpg" alt="Recorte de prensa 2">
-    </div>
+        <section class="galeria-prensa">
+            <h2>Sala Opal (Grao Castellón)<br>Historia de la música pop en Castellón – 2012</h2>
+            <div class="grid-prensa">
+                <a target="_blank" href="imagenes/prensa/image/Go%20-%20Opal%202012%20[1024x768].jpg">
+                    <img src="imagenes/prensa/thumbnail/Go%20-%20Opal%202012%20[1024x768]%20[320x200].jpg" alt="Opal 2012-1"></a>
+                <a target="_blank" href="imagenes/prensa/image/nomepierdoniuna%20opal2012.jpg">
+                    <img src="imagenes/prensa/thumbnail/nomepierdoniuna%20opal2012%20[320x200].jpg" alt="Opal 2012-2"></a>
+            </div>
+        </section>
 
-    <div class="lightbox" id="img3">
-      <a href="#" class="close">&times;</a>
-      <img src="imagenes/prensa3.jpg" alt="Recorte de prensa 3">
-    </div>
+        <hr>
 
-    <div class="lightbox" id="img4">
-      <a href="#" class="close">&times;</a>
-      <img src="imagenes/prensa4.jpg" alt="Recorte de prensa 4">
-    </div>
-
-    <div class="lightbox" id="img5">
-      <a href="#" class="close">&times;</a>
-      <img src="imagenes/prensa5.jpg" alt="Recorte de prensa 5">
-    </div>
-
-  </main>
-
-  <footer>
-    &copy; 1ª Komunión - Todos los derechos reservados
-  </footer>
+        <section class="galeria-prensa">
+            <h2>Ultrasons 2013</h2>
+            <div class="grid-prensa">
+                <a target="_blank" href="imagenes/prensa/image/ultrasons13.jpg">
+                    <img src="imagenes/prensa/thumbnail/ultrasons13%20[150].jpg" alt="Ultrasons 2013"></a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
